--- a/style.css
+++ b/style.css
@@ -51,3 +51,20 @@ body {
 .cell:nth-child(7) {
   border-bottom: none;
 }
+
+.cell.x::before,
+.cell.x::after {
+  content: '';
+  position: absolute;
+  width: calc(var(--mark-size) * 0.15);
+  height: var(--mark-size);
+  background-color: black;
+}
+
+.cell.x::before {
+  transform: rotate(45deg);
+}
+
+.cell.x::after {
+  transform: rotate(-45deg);
+}
