fix lint errors

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
@@ -69,6 +71,7 @@ body {
 .board.circle .cell:not(.x):not(.circle):hover::before {
   background-color: lightgrey;
 }
+
 .cell.x::before,
 .cell.x::after,
 .board.x .cell:not(.x):not(.circle):hover::before,
@@ -130,7 +133,7 @@ body {
   font-size: 3rem;
   background-color: white;
   border: 1px solid black;
-  padding: .25em .5em;
+  padding: 0.25em 0.5em;
   cursor: pointer;
 }
 
